<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/back_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_action_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/noto_bold"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/noto_medium"
                android:text="@string/name"
                />
            <EditText
                android:id="@+id/name_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="20dp"
                android:fontFamily="@font/noto_bold"
                android:importantForAutofill="no"
                android:maxLength="30"
                android:inputType="text"
                tools:ignore="LabelFor" />
            <TextView
                android:id="@+id/age_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/noto_medium"
                android:text="@string/age"
                />
            <EditText
                android:id="@+id/age_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="20dp"
                android:fontFamily="@font/noto_bold"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="2"
                tools:ignore="LabelFor" />
            <TextView
                android:id="@+id/email_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/noto_medium"
                android:text="@string/email"
                />
            <EditText
                android:id="@+id/email_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="20dp"
                android:fontFamily="@font/noto_bold"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                tools:ignore="LabelFor" />
            <TextView
                android:id="@+id/password_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/noto_medium"
                android:text="@string/password"
                />
            <EditText
                android:id="@+id/password_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="20dp"
                android:fontFamily="@font/noto_bold"
                android:importantForAutofill="no"
                android:inputType="textVisiblePassword"
                android:maxLength="30"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="22dp"
                android:background="@drawable/customborderblue"
                android:fontFamily="@font/noto_bold"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>